--- a/1.html
+++ b/1.html
@@ -12,7 +12,7 @@
     <li><a href="3.html">JavaScript</a></li>
   </ol>
 
-  <h2>HTML</h2>
+  <h2>HTML_수정본</h2>
   <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/"target="_blank" title="html5 specification">
     hyper text markup language(html)</a> is the standard markup language
     for <strong>creating <u>web</u> pages</strong> and web applications.</p>
